--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,14 +21,14 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: "16"
-      
+
       - name: Cache dependencies
         id: cache
         uses: actions/cache@v3
         with:
-          path: '**/node_modules'
+          path: "**/node_modules"
           key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
-      
+
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         run: yarn install --immutable
@@ -38,16 +38,16 @@ jobs:
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           server-token: ${{ secrets.TURBO_SERVER_TOKEN }}
-      
+
       - name: Run tests
         run: yarn run test
-      
+
       - name: Run lint and typechecking
-        run: yarn run verify 
-      
+        run: yarn run verify
+
       - name: Run build
         run: yarn turbo run build --color --api="http://127.0.0.1:9080" --token="${{ secrets.TURBO_SERVER_TOKEN }}" --team="${{ github.repository_owner }}"
-      
+
       - name: Upload build artifacts
         uses: actions/upload-artifact@v2
         with:
@@ -70,10 +70,10 @@ jobs:
     steps:
       - name: Download Artifacts
         uses: actions/download-artifact@v2
-      
+
       - name: Compute Timestamp
         run: echo "TIMESTAMP=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
-      
+
       - name: Prepare Directory
         shell: bash
         run: |
@@ -85,22 +85,12 @@ jobs:
         env:
           DEPLOY_KEY: ${{secrets.KEY}}
         with:
-          flags: '-avzr --update'
-          options: ''
-          ssh_options: '-p ${{secrets.PORT}}'
-          src: 'dist'
-          dest: '${{secrets.USER}}@${{secrets.HOST}}:/var/www/openmrs3.x'
+          flags: "-avzr --update"
+          options: ""
+          ssh_options: "-p ${{secrets.PORT}}"
+          src: "dist"
+          dest: "${{secrets.USER}}@${{secrets.HOST}}:/var/www/openmrs3.x"
 
-      - name: Publish to Digital Ocean
-        uses: jakejarvis/s3-sync-action@master
-        with:
-          args: --acl public-read --follow-symlinks --cache-control "max-age=31536000"
-        env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_S3_ENDPOINT: ${{ secrets.AWS_S3_ENDPOINT }}
-          SOURCE_DIR: "dist"
       - name: Update Importmap
         uses: fjogeleit/http-request-action@master
         with:
@@ -108,7 +98,7 @@ jobs:
           method: "PATCH"
           username: ${{ secrets.DEPLOYER_USERNAME }}
           password: ${{ secrets.DEPLOYER_PASSWORD }}
-          data: '{ "service":"${{ env.ESM_NAME }}","url":"https://donaldkibet.fra1.digitaloceanspaces.com/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}/${{ env.JS_NAME }}" }'
+          data: '{ "service":"${{ env.ESM_NAME }}","url":"https://spotstaging.kenyahmis.org/dist/%40openmrs/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}/${{ env.JS_NAME }}" }'
           customHeaders: '{ "Accept": "application/json", "Content-Type": "application/json" }'
 
   deploy_patient_search_app:
@@ -126,10 +116,10 @@ jobs:
     steps:
       - name: Download Artifacts
         uses: actions/download-artifact@v2
-      
+
       - name: Compute Timestamp
         run: echo "TIMESTAMP=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
-      
+
       - name: Prepare Directory
         shell: bash
         run: |
@@ -141,23 +131,12 @@ jobs:
         env:
           DEPLOY_KEY: ${{secrets.KEY}}
         with:
-          flags: '-avzr --update'
-          options: ''
-          ssh_options: '-p ${{secrets.PORT}}'
-          src: 'dist'
-          dest: '${{secrets.USER}}@${{secrets.HOST}}:/var/www/openmrs3.x'
-      
-      - name: Publish to Digital Ocean
-        uses: jakejarvis/s3-sync-action@master
-        with:
-          args: --acl public-read --follow-symlinks --cache-control "max-age=31536000"
-        env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_S3_ENDPOINT: ${{ secrets.AWS_S3_ENDPOINT }}
-          SOURCE_DIR: "dist"
-      
+          flags: "-avzr --update"
+          options: ""
+          ssh_options: "-p ${{secrets.PORT}}"
+          src: "dist"
+          dest: "${{secrets.USER}}@${{secrets.HOST}}:/var/www/openmrs3.x"
+
       - name: Update Importmap
         uses: fjogeleit/http-request-action@master
         with:
@@ -165,7 +144,7 @@ jobs:
           method: "PATCH"
           username: ${{ secrets.DEPLOYER_USERNAME }}
           password: ${{ secrets.DEPLOYER_PASSWORD }}
-          data: '{ "service":"${{ env.ESM_NAME }}","url":"https://donaldkibet.fra1.digitaloceanspaces.com/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}/${{ env.JS_NAME }}" }'
+          data: '{ "service":"${{ env.ESM_NAME }}","url":"https://spotstaging.kenyahmis.org/dist/%40openmrs/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}/${{ env.JS_NAME }}" }'
           customHeaders: '{ "Accept": "application/json", "Content-Type": "application/json" }'
 
   deploy_outpatient_app:
@@ -183,10 +162,10 @@ jobs:
     steps:
       - name: Download Artifacts
         uses: actions/download-artifact@v2
-      
+
       - name: Compute Timestamp
         run: echo "TIMESTAMP=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
-      
+
       - name: Prepare Directory
         shell: bash
         run: |
@@ -198,23 +177,12 @@ jobs:
         env:
           DEPLOY_KEY: ${{secrets.KEY}}
         with:
-          flags: '-avzr --update'
-          options: ''
-          ssh_options: '-p ${{secrets.PORT}}'
-          src: 'dist'
-          dest: '${{secrets.USER}}@${{secrets.HOST}}:/var/www/openmrs3.x'
-      
-      - name: Publish to Digital Ocean
-        uses: jakejarvis/s3-sync-action@master
-        with:
-          args: --acl public-read --follow-symlinks --cache-control "max-age=31536000"
-        env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_S3_ENDPOINT: ${{ secrets.AWS_S3_ENDPOINT }}
-          SOURCE_DIR: "dist"
-      
+          flags: "-avzr --update"
+          options: ""
+          ssh_options: "-p ${{secrets.PORT}}"
+          src: "dist"
+          dest: "${{secrets.USER}}@${{secrets.HOST}}:/var/www/openmrs3.x"
+
       - name: Update Importmap
         uses: fjogeleit/http-request-action@master
         with:
@@ -222,7 +190,7 @@ jobs:
           method: "PATCH"
           username: ${{ secrets.DEPLOYER_USERNAME }}
           password: ${{ secrets.DEPLOYER_PASSWORD }}
-          data: '{ "service":"${{ env.ESM_NAME }}","url":"https://donaldkibet.fra1.digitaloceanspaces.com/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}/${{ env.JS_NAME }}" }'
+          data: '{ "service":"${{ env.ESM_NAME }}","url":"https://spotstaging.kenyahmis.org/dist/%40openmrs/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}/${{ env.JS_NAME }}" }'
           customHeaders: '{ "Accept": "application/json", "Content-Type": "application/json" }'
 
   deploy_appointments_app:
@@ -240,10 +208,10 @@ jobs:
     steps:
       - name: Download Artifacts
         uses: actions/download-artifact@v2
-      
+
       - name: Compute Timestamp
         run: echo "TIMESTAMP=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
-      
+
       - name: Prepare Directory
         shell: bash
         run: |
@@ -255,22 +223,12 @@ jobs:
         env:
           DEPLOY_KEY: ${{secrets.KEY}}
         with:
-          flags: '-avzr --update'
-          options: ''
-          ssh_options: '-p ${{secrets.PORT}}'
-          src: 'dist'
-          dest: '${{secrets.USER}}@${{secrets.HOST}}:/var/www/openmrs3.x'
-      - name: Publish to Digital Ocean
-        uses: jakejarvis/s3-sync-action@master
-        with:
-          args: --acl public-read --follow-symlinks --cache-control "max-age=31536000"
-        env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_S3_ENDPOINT: ${{ secrets.AWS_S3_ENDPOINT }}
-          SOURCE_DIR: "dist"
-      
+          flags: "-avzr --update"
+          options: ""
+          ssh_options: "-p ${{secrets.PORT}}"
+          src: "dist"
+          dest: "${{secrets.USER}}@${{secrets.HOST}}:/var/www/openmrs3.x"
+
       - name: Update Importmap
         uses: fjogeleit/http-request-action@master
         with:
@@ -278,7 +236,7 @@ jobs:
           method: "PATCH"
           username: ${{ secrets.DEPLOYER_USERNAME }}
           password: ${{ secrets.DEPLOYER_PASSWORD }}
-          data: '{ "service":"${{ env.ESM_NAME }}","url":"https://donaldkibet.fra1.digitaloceanspaces.com/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}/${{ env.JS_NAME }}" }'
+          data: '{ "service":"${{ env.ESM_NAME }}","url":"https://spotstaging.kenyahmis.org/dist/%40openmrs/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}/${{ env.JS_NAME }}" }'
           customHeaders: '{ "Accept": "application/json", "Content-Type": "application/json" }'
 
   deploy_patient_list_app:
@@ -296,10 +254,10 @@ jobs:
     steps:
       - name: Download Artifacts
         uses: actions/download-artifact@v2
-      
+
       - name: Compute Timestamp
         run: echo "TIMESTAMP=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
-      
+
       - name: Prepare Directory
         shell: bash
         run: |
@@ -311,23 +269,12 @@ jobs:
         env:
           DEPLOY_KEY: ${{secrets.KEY}}
         with:
-          flags: '-avzr --update'
-          options: ''
-          ssh_options: '-p ${{secrets.PORT}}'
-          src: 'dist'
-          dest: '${{secrets.USER}}@${{secrets.HOST}}:/var/www/openmrs3.x'
-      
-      - name: Publish to Digital Ocean
-        uses: jakejarvis/s3-sync-action@master
-        with:
-          args: --acl public-read --follow-symlinks --cache-control "max-age=31536000"
-        env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_S3_ENDPOINT: ${{ secrets.AWS_S3_ENDPOINT }}
-          SOURCE_DIR: "dist"
-      
+          flags: "-avzr --update"
+          options: ""
+          ssh_options: "-p ${{secrets.PORT}}"
+          src: "dist"
+          dest: "${{secrets.USER}}@${{secrets.HOST}}:/var/www/openmrs3.x"
+
       - name: Update Importmap
         uses: fjogeleit/http-request-action@master
         with:
@@ -335,7 +282,7 @@ jobs:
           method: "PATCH"
           username: ${{ secrets.DEPLOYER_USERNAME }}
           password: ${{ secrets.DEPLOYER_PASSWORD }}
-          data: '{ "service":"${{ env.ESM_NAME }}","url":"https://donaldkibet.fra1.digitaloceanspaces.com/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}/${{ env.JS_NAME }}" }'
+          data: '{ "service":"${{ env.ESM_NAME }}","url":"https://spotstaging.kenyahmis.org/dist/%40openmrs/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}/${{ env.JS_NAME }}" }'
           customHeaders: '{ "Accept": "application/json", "Content-Type": "application/json" }'
 
   deploy_patient_registration_app:
@@ -353,10 +300,10 @@ jobs:
     steps:
       - name: Download Artifacts
         uses: actions/download-artifact@v2
-      
+
       - name: Compute Timestamp
         run: echo "TIMESTAMP=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
-      
+
       - name: Prepare Directory
         shell: bash
         run: |
@@ -368,23 +315,12 @@ jobs:
         env:
           DEPLOY_KEY: ${{secrets.KEY}}
         with:
-          flags: '-avzr --update'
-          options: ''
-          ssh_options: '-p ${{secrets.PORT}}'
-          src: 'dist'
-          dest: '${{secrets.USER}}@${{secrets.HOST}}:/var/www/openmrs3.x'
-      
-      - name: Publish to Digital Ocean
-        uses: jakejarvis/s3-sync-action@master
-        with:
-          args: --acl public-read --follow-symlinks --cache-control "max-age=31536000"
-        env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_S3_ENDPOINT: ${{ secrets.AWS_S3_ENDPOINT }}
-          SOURCE_DIR: "dist"
-      
+          flags: "-avzr --update"
+          options: ""
+          ssh_options: "-p ${{secrets.PORT}}"
+          src: "dist"
+          dest: "${{secrets.USER}}@${{secrets.HOST}}:/var/www/openmrs3.x"
+
       - name: Update Importmap
         uses: fjogeleit/http-request-action@master
         with:
@@ -392,5 +328,5 @@ jobs:
           method: "PATCH"
           username: ${{ secrets.DEPLOYER_USERNAME }}
           password: ${{ secrets.DEPLOYER_PASSWORD }}
-          data: '{ "service":"${{ env.ESM_NAME }}","url":"https://donaldkibet.fra1.digitaloceanspaces.com/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}/${{ env.JS_NAME }}" }'
+          data: '{ "service":"${{ env.ESM_NAME }}","url":"https://spotstaging.kenyahmis.org/dist/%40openmrs/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}/${{ env.JS_NAME }}" }'
           customHeaders: '{ "Accept": "application/json", "Content-Type": "application/json" }'
