--- a/packages/esm-appointments-app/package.json
+++ b/packages/esm-appointments-app/package.json
@@ -37,6 +37,7 @@
     "@carbon/react": "^1.12.0",
     "formik": "^2.2.9",
     "lodash-es": "^4.17.15",
+    "xlsx": "^0.18.5",
     "yup": "^0.32.11"
   },
   "peerDependencies": {
