--- a/packages/esm-patient-registration-app/package.json
+++ b/packages/esm-patient-registration-app/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@openmrs/esm-patient-registration-app",
-  "version": "8.1.1",
-  "description": "Patient registration microfrontend for O3",
-  "browser": "dist/openmrs-esm-patient-registration-app.js",
+  "name": "@kenyaemr/esm-patient-registration-app",
+  "version": "6.0.1-pre.1.0.6",
+  "description": "Patient registration microfrontend for the OpenMRS SPA",
+  "browser": "dist/kenyaemr-esm-patient-registration-app.js",
   "main": "src/index.ts",
   "source": true,
   "license": "MPL-2.0",
