--- a/packages/esm-service-queues-app/package.json
+++ b/packages/esm-service-queues-app/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@openmrs/esm-service-queues-app",
-  "version": "8.0.2",
-  "description": "Outpatient front-end module for O3",
-  "browser": "dist/openmrs-esm-service-queues-app.js",
+  "name": "@kenyaemr/esm-service-queues-app",
+  "version": "7.0.2",
+  "description": "Outpatient front-end module for the OpenMRS SPA",
+  "browser": "dist/kenyaemr-esm-service-queues-app.js",
   "main": "src/index.ts",
   "source": true,
   "license": "MPL-2.0",
@@ -49,5 +49,6 @@
   },
   "devDependencies": {
     "webpack": "^5.74.0"
-  }
+  },
+  "stableVersion": "7.0.1"
 }
