--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openmrs/esm-patient-management",
-  "version": "7.0.0",
+  "version": "7.0.1",
   "private": true,
   "description": "Patient management microfrontend for the OpenMRS 3.x frontend",
   "workspaces": [
@@ -11,7 +11,7 @@
     "ci:publish": "yarn workspaces foreach --all --topological --exclude @openmrs/esm-patient-management npm publish --access public --tag latest",
     "ci:prepublish": "yarn workspaces foreach --all --topological --exclude @openmrs/esm-patient-management npm publish --access public --tag next",
     "release": "yarn workspaces foreach --all --topological version",
-    "verify": "turbo run lint typescript test --concurrency=1",
+    "verify": "turbo run lint typescript  --concurrency=1",
     "test-e2e": "playwright test",
     "postinstall": "husky install"
   },
