--- a/packages/esm-patient-list-management-app/package.json
+++ b/packages/esm-patient-list-management-app/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@openmrs/esm-patient-list-management-app",
-  "version": "7.0.0",
+  "name": "@kenyaemr/esm-patient-list-management-app",
+  "version": "7.0.2",
   "description": "Microfrontend for managing patient lists in O3",
-  "browser": "dist/openmrs-esm-patient-list-management-app.js",
+  "browser": "dist/kenyaemr-esm-patient-list-management-app.js",
   "main": "src/index.ts",
   "source": true,
   "license": "MPL-2.0",
@@ -51,5 +51,6 @@
   },
   "devDependencies": {
     "webpack": "^5.74.0"
-  }
+  },
+  "stableVersion": "7.0.1"
 }
