--- a/packages/esm-active-visits-app/package.json
+++ b/packages/esm-active-visits-app/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@openmrs/esm-active-visits-app",
-  "version": "8.1.1",
-  "description": "Active visits widget microfrontend for O3",
-  "browser": "dist/openmrs-esm-active-visits-app.js",
+  "name": "@kenyaemr/esm-active-visits-app",
+  "version": "7.0.2",
+  "description": "Active visits widget microfrontend for the OpenMRS SPA",
+  "browser": "dist/kenyaemr-esm-active-visits-app.js",
   "main": "src/index.ts",
   "source": true,
   "license": "MPL-2.0",
@@ -50,5 +50,6 @@
   },
   "devDependencies": {
     "webpack": "^5.74.0"
-  }
+  },
+  "stableVersion": "7.0.1"
 }
