(chore) rebase to latest changes and have unique service queue location

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "env": {
     "node": true
   },
+  "ignorePatterns": ["*.test.tsx"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
