--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@carbon/react": "~1.37.0",
-    "@openmrs/esm-framework": "next",
+    "@openmrs/esm-framework": "^5.7.3-pre.2161",
     "@openmrs/esm-patient-common-lib": "next",
     "@playwright/test": "1.45.2",
     "@swc/core": "^1.2.165",
