--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "packages/*"
   ],
   "scripts": {
-    "start": "openmrs develop --sources packages/esm-patient-search-app --port 8090 --backend https://hie.kenyahmis.org --config-url https://hie.kenyahmis.org/openmrs/spa/kenyaemr.config.json https://hie.kenyahmis.org/openmrs/spa/openmrs.config.json https://hie.kenyahmis.org/openmrs/spa/registration.config.json ",
+    "start": "openmrs develop --sources packages/esm-patient-search-app packages/esm-patient-registration-app --port 8090 --backend https://dmi.kenyahmis.org --config-url https://dmi.kenyahmis.org/openmrs/spa/kenyaemr.config.json https://dmi.kenyahmis.org/openmrs/spa/openmrs.config.json https://hie.kenyahmis.org/openmrs/spa/registration.config.json ",
     "ci:publish": "yarn workspaces foreach --all --topological --exclude @openmrs/esm-patient-management npm publish --access public --tag latest",
     "ci:prepublish": "yarn workspaces foreach --all --topological --exclude @openmrs/esm-patient-management npm publish --access public --tag next",
     "release": "yarn workspaces foreach --all --topological version",
