--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "packages/*"
   ],
   "scripts": {
-    "start": "openmrs develop --sources packages/esm-patient-search-app packages/esm-patient-registration-app --port 8090 --backend https://dmi.kenyahmis.org --config-url https://dmi.kenyahmis.org/openmrs/spa/kenyaemr.config.json https://dmi.kenyahmis.org/openmrs/spa/openmrs.config.json https://hie.kenyahmis.org/openmrs/spa/registration.config.json ",
+    "start": "openmrs develop --sources packages/esm-patient-search-app packages/esm-patient-registration-app --port 8090 --backend https://test.kenyahmis.org --config-url https://test.kenyahmis.org/openmrs/spa/kenyaemr.config.json https://test.kenyahmis.org/openmrs/spa/openmrs.config.json https://test.kenyahmis.org/openmrs/spa/registration.config.json ",
     "ci:publish": "yarn workspaces foreach --all --topological --exclude @openmrs/esm-patient-management npm publish --access public --tag latest",
     "ci:prepublish": "yarn workspaces foreach --all --topological --exclude @openmrs/esm-patient-management npm publish --access public --tag next",
     "release": "yarn workspaces foreach --all --topological version",
@@ -27,7 +27,7 @@
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@carbon/react": "^1.71.0",
-    "@openmrs/esm-framework": "^6.2.1-pre.2794",
+    "@openmrs/esm-framework": "^8.0.1-pre.3473",
     "@openmrs/esm-patient-common-lib": "next",
     "@playwright/test": "1.49.0",
     "@swc/core": "^1.2.165",
@@ -66,7 +66,7 @@
     "jest-cli": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.1",
-    "openmrs": "next",
+    "openmrs": "^8.0.1-pre.3473",
     "prettier": "^3.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
