--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "workspaces": [
     "packages/*"
   ],
+  "resolutions": {
+    "cheerio": "1.0.0-rc.12"
+  },
   "scripts": {
     "start": "openmrs develop --sources packages/esm-patient-search-app packages/esm-patient-registration-app --port 8090 --backend https://test.kenyahmis.org --config-url https://test.kenyahmis.org/openmrs/spa/kenyaemr.config.json https://test.kenyahmis.org/openmrs/spa/openmrs.config.json https://test.kenyahmis.org/openmrs/spa/registration.config.json ",
     "ci:publish": "yarn workspaces foreach --all --topological --exclude @openmrs/esm-patient-management npm publish --access public --tag latest",
@@ -47,6 +50,7 @@
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "babel-preset-minify": "^0.5.1",
+    "cheerio": "1.0.0-rc.12",
     "concurrently": "^5.3.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
@@ -60,7 +64,7 @@
     "eslint-plugin-testing-library": "^6.2.2",
     "husky": "^8.0.3",
     "i18next": "^21.10.0",
-    "i18next-parser": "^6.6.0",
+    "i18next-parser": "^8.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
